--- a/src/app/pages/recipes/recipes.component.css
+++ b/src/app/pages/recipes/recipes.component.css
@@ -26,3 +26,10 @@
     color: #3e8e41;
     background-color: #ffffff;
 }
+.cook-icon {
+  color: #3e8e41;
+}
+
+.sad-icon {
+  color: rebeccapurple;
+}
